fixed issue with safari

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
   <header>
     <nav class="nav-bar">
-      <ul class="nav-links">
-        <li><a href="#project-wrapper" class="link"> projects</a></li>
-        <li><a href="#about-wrapper" class="link"> about</a></li>
-        <li><a href="#footer-wrapper" class="link"> contact</a></li>
+      <ul class="menu-links">
+        <li><a href="#project-wrapper" class="menu"> projects</a></li>
+        <li><a href="#about-wrapper" class="menu"> about</a></li>
+        <li><a href="#footer-wrapper" class="menu"> contact</a></li>
       </ul>           
     </nav>
   </header>     
@@ -37,29 +37,29 @@
       <div class="project-area">
         <div class="project">
           <div class="front">
-            <img src="./img/unplugged-retreat.png" alt="Unplugged Retreat" width="400"/>
+            <img src="./img/unplugged-retreat.png" alt="Unplugged Retreat" />
             <h3>Unplugged Retreat</h3>
           </div> 
           <div class="overlay">
             <div class="text">
               <h3>Unplugged Retreat</h3>
               <p>
-                A 3-page responsive website replicated from a design comp from PhotoShop.
+                A 3-page responsive website replicated from a design comp from Photoshop.
                 <br/>
               </p>
               <p><strong>Skills:</strong> HTML, CSS, Flexbox</p>
             </div>
             <div class="buttons">
-                <a href="https://github.com/unplugged-retreat" target="_blank" rel="noopener noreferrer">
-                  <button type="button" class="btn-code">Show code</button></a>
-                <a href="https://mickdollentas.github.io/unplugged-retreat/" target="_blank" rel="noopener noreferrer">
-                  <button type="button" class="btn-demo">Demo</button></a>
+                <a class="btn-code" href="https://github.com/MickDollentas/unplugged-retreat" role="button" target="_blank" rel="noopener noreferrer">
+                  Show code</a>
+                <a class="btn-demo" href="https://mickdollentas.github.io/unplugged-retreat/" role="button" target="_blank" rel="noopener noreferrer">
+                  Demo</a>
             </div>
           </div>
         </div> 
         <div class="project">
           <div class="front">
-            <img src="./img/guess-the-word.png" alt="Guess the Word" width="400"/>
+            <img src="./img/guess-the-word.png" alt="Guess the Word" />
             <h3>Guess the Word</h3>
           </div> 
           <div class="overlay">
@@ -72,16 +72,16 @@
               <p><strong>Skills:</strong> JavaScript</p>
             </div>
             <div class="buttons">
-                <a href="https://github.com/MickDollentas/guess-the-word" target="_blank" rel="noopener noreferrer">
-                  <button type="button" class="btn-code">Show code</button></a>
-                <a href="https://mickdollentas.github.io/guess-the-word/" target="_blank" rel="noopener noreferrer">
-                  <button type="button" class="btn-demo">Demo</button></a>
+                <a class="btn-code" href="https://github.com/MickDollentas/guess-the-word" role="button" target="_blank" rel="noopener noreferrer">
+                  Show code</a>
+                <a class="btn-demo" href="https://mickdollentas.github.io/guess-the-word/" role="button" target="_blank" rel="noopener noreferrer">
+                  Demo</a>
             </div>
           </div>
         </div>  
         <div class="project">
           <div class="front">
-            <img src="./img/name-tag.png" alt="Name Tag Generator" width="400"/>
+            <img src="./img/name-tag.png" alt="Name Tag Generator" />
             <h3>Name Tag Generator</h3>
           </div> 
           <div class="overlay">
@@ -94,16 +94,16 @@
               <p><strong>Skills:</strong> ES6, JSX</p>
             </div>
             <div class="buttons">
-                <a href="https://codesandbox.io/s/name-tag-generator-1632dv" target="_blank" rel="noopener noreferrer">
-                  <button type="button" class="btn-code">Show code</button></a>
-                <a href="https://1632dv.csb.app/" target="_blank" rel="noopener noreferrer">
-                  <button type="button" class="btn-demo">Demo</button></a>
+                <a class="btn-code" href="https://codesandbox.io/s/name-tag-generator-1632dv" role="button" target="_blank" rel="noopener noreferrer">
+                  Show code</a>
+                  <a class="btn-demo" href="https://1632dv.csb.app/" role="button" target="_blank" rel="noopener noreferrer">
+                  Demo</a>
             </div>
           </div>
         </div>  
         <div class="project">
           <div class="front">
-            <img src="./img/sticky-notes.png" alt="Stick Note App" width="400"/>
+            <img src="./img/sticky-notes.png" alt="Stick Note App" />
             <h3>Sticky Note App</h3>
           </div> 
           <div class="overlay">
@@ -116,16 +116,16 @@
               <p><strong>Skills:</strong> ES6, JSX</p>
             </div>
             <div class="buttons">
-                <a href="https://codesandbox.io/s/sticky-note-ui-wtck0r" target="_blank" rel="noopener noreferrer">
-                  <button type="button" class="btn-code">Show code</button></a>
-                <a href="https://wtck0r.csb.app/" target="_blank" rel="noopener noreferrer">
-                  <button type="button" class="btn-demo">Demo</button></a>
+                <a class="btn-code" href="https://codesandbox.io/s/sticky-note-ui-wtck0r" role="button" target="_blank" rel="noopener noreferrer">
+                  Show code</a>
+                <a class="btn-demo" href="https://wtck0r.csb.app/" role="button" target="_blank" rel="noopener noreferrer">
+                  Demo</a>
             </div>
           </div>
         </div>
         <div class="project">
           <div class="front">
-            <img src="./img/drum-kit.png" alt="Drum Kit" width="400"/>
+            <img src="./img/drum-kit.png" alt="Drum Kit" />
             <h3>JS Drum Kit</h3>
           </div> 
           <div class="overlay">
@@ -138,10 +138,10 @@
               <p><strong>Skills:</strong> JavaScript</p>
             </div>
             <div class="buttons">
-                <a href="https://github.com/MickDollentas/js-drum-kit" target="_blank" rel="noopener noreferrer">
-                  <button type="button" class="btn-code">Show code</button></a>
-                <a href="https://mickdollentas.github.io/js-drum-kit/" target="_blank" rel="noopener noreferrer">
-                  <button type="button" class="btn-demo">Demo</button></a>
+                <a class="btn-code" href="https://github.com/MickDollentas/js-drum-kit" role="button" target="_blank" rel="noopener noreferrer">
+                  Show code</a>
+                <a class="btn-demo" href="https://mickdollentas.github.io/js-drum-kit/" role="button" target="_blank" rel="noopener noreferrer">
+                  Demo</a>
             </div>
           </div>
         </div>
@@ -152,7 +152,7 @@
       <h2>about</h2>
         <div class="about-content">
           <div class="about">
-            <img src="./img/Michael_Drawing.png" alt="My Photo" width="300" height="auto"/>
+            <img src="./img/Michael_Drawing.png" alt="My Photo" width="300"/>
             <h3>Hi, I'm Mickey.</h3> 
             <p>A front-end developer based in Diamond Bar, California. I started my journey in 2020 and haven't looked back since. I pride myself in clean and creative coding. When I'm not coding I'm chasing around my 3 year old son or playing video games.
            </p>
