added skills section and meta tags

--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="keywords" content="HTML, CSS, JavaScript, ReactJS, Portfolio" />
+  <meta property="og:url" content="http://www.michaeldollentas.com" />
+  <meta property="og:title" content="Michael Dollentas' Portfolio" />
+  <meta property="og:description" content="Front-End Web Developer and professional Dad" />
+  <meta property="og:image" href="https://i.postimg.cc/SRCbM3bT/hero-min.png" />
+  <meta property="og:type" content="website" />
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="http://michaeldollentas.com/">
+  <meta property="twitter:title" content="Michael Dollentas' Portfolio">
+  <meta property="twitter:description" content="Front-End Web Developer and professional Dad">
+  <meta property="twitter:image" content="https://i.postimg.cc/SRCbM3bT/hero-min.png">
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="responsive.css" />
   <script src="https://kit.fontawesome.com/b60c554fe0.js" crossorigin="anonymous"></script>
   <title>Michael Dollentas Portfolio</title>
+  <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png" />
 </head>
 
 <body>
@@ -30,6 +41,21 @@
           <p>Front-End Developer</p>
         </div>
       </div>  
+    </section>
+
+    <section id="skills-wrapper">
+      <h2>skills</h2>
+      <div class="tech-skills">
+        <ul class="tech-icons">
+          <li><i class="fa-brands fa-html5"></i></li>
+          <li><i class="fa-brands fa-css3"></i></li>
+          <li><i class="fa-brands fa-js-square"></i></li>
+          <li><i class="fa-brands fa-react"></i></li>
+          <li><i class="fa-brands fa-git-alt"></i></li>
+          <li><i class="fa-brands fa-github"></i></li>
+          
+        </ul>
+      </div>
     </section>
     
     <section id="project-wrapper">
